# fenix

./: .gitignore  Cargo.toml  Makefile  README.md  meson.build  robo.yml  rust.yml  uefi.ini
.cargo/: config.toml
.github/workflows/: rust.yml
src/: efi.c  efi.h  efi_main.c  interrupts.rs  lib.rs  main.rs  qemu.rs  serial.rs  tester.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs
